--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,22 +1,22 @@
-name: Deployment Workflow
+name: Continuous Deployment Workflow
 
+# This workflow is triggered whenever commits are pushed to a branch
+# matching the pattern: releases/**
+# OR when it's manually triggered
 on:
   push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - 'main'
   workflow_dispatch:
-    
 
 jobs:
 
-  # Run unit tests to make sure everything is 👍
-  tests:
-
+  # Deploy the current branch to production
+  deploy:
+    name: 'Deploy to staging'
     runs-on: ubuntu-latest
-
     steps:
-    
+
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       name: 'Setup PHP 8.0'
       with:
@@ -27,15 +27,35 @@ jobs:
 
     - name: 'Copy .env'
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+    - uses: SpicyPizza/create-envfile@v1
+      with:
+        envkey_APP_NAME: Laravel
+        envkey_APP_ENV: local
+        envkey_APP_DEBUG: true
+        envkey_APP_KEY: ''
+        envkey_APP_URL: http://${{ secrets.PRODUCTION_HOSTNAME }}
     
-    - name: 'Install Dependencies'
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - uses: burnett01/rsync-deployments@4.1
+      name: 'Deploy to staging'
+      with:
+        switches: -avzr --delete
+        path: ./
+        remote_path: /var/app/
+        remote_host: ${{ secrets.PRODUCTION_HOSTNAME }}
+        remote_user: ${{ secrets.PRODUCTION_REMOTE_USER }}
+        remote_key: ${{ secrets.PRODUCTION_SSH_KEY }}
     
-    - name: 'Generate key'
-      run: php artisan key:generate
-    
-    - name: 'Update Directory Permissions'
-      run: chmod -R 777 storage bootstrap/cache
-    
-    - name: 'Run Tests'
-      run: php artisan test
+    - uses: JimCronqvist/action-ssh@master
+      name: Execute SSH commmands on remote server
+      with:
+        hosts: '${{ secrets.PRODUCTION_REMOTE_USER }}@${{ secrets.PRODUCTION_HOSTNAME }}'
+        privateKey: ${{ secrets.PRODUCTION_SSH_KEY }}
+        command: |
+          cd /var/app/
+          composer install --optimize-autoloader --no-dev
+          php artisan key:generate
+          php artisan config:cache
+          php artisan route:cache
+          php artisan view:cache
+          sudo php artisan serve --host ${{ secrets.PRODUCTION_HOSTNAME }} --port 80
