--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,7 +91,7 @@ jobs:
         envkey_APP_KEY: ''
         envkey_APP_URL: http://${{ secrets.STAGING_HOSTNAME }}
     
-    - uses: burnett01/rsync-deployments@4.1
+    - uses: burnett01/rsync-deployments@23a557dceb19f9bb960ef40cf75cab5e9b37ec1f
       name: 'Deploy to staging'
       with:
         switches: -avzr --delete
@@ -101,7 +101,7 @@ jobs:
         remote_user: ${{ secrets.STAGING_REMOTE_USER }}
         remote_key: ${{ secrets.STAGING_SSH_KEY }}
     
-    - uses: JimCronqvist/action-ssh@master
+    - uses: JimCronqvist/action-ssh@7737f1192ddd8376686e9d6354dea44592c942bf
       name: Execute SSH commmands on remote server
       with:
         hosts: '${{ secrets.STAGING_REMOTE_USER }}@${{ secrets.STAGING_HOSTNAME }}'
